--- a/Portfolio1.1.0.0/css/style.css
+++ b/Portfolio1.1.0.0/css/style.css
@@ -66,6 +66,7 @@
     font-family: 'Lato', sans-serif;
     border:0;
     margin:0;
+    
 }
 
 .sec2 img{
@@ -84,3 +85,11 @@
     font-style: normal;
 }
 
+.col-centered {
+    display:inline-block;
+    float:none;
+    /* reset the text-align */
+    text-align:center;
+    /* inline-block space fix */
+    margin-right:-4px;
+}
