--- a/Portfolio1.1.0.0/css/style.css
+++ b/Portfolio1.1.0.0/css/style.css
@@ -66,12 +66,17 @@
     font-family: 'Lato', sans-serif;
     border:0;
     margin:0;
+    margin-bottom: 100px;
     
 }
 
 .sec2 img{
     width: 40%;
     height: 50%;
+}
+
+.sec2 h2 {
+    margin-bottom: 5%;
 }
 
 .sec2 h3 {
@@ -91,5 +96,23 @@
     /* reset the text-align */
     text-align:center;
     /* inline-block space fix */
-    margin-right:-4px;
+    margin: 10px;
+}
+
+
+/* SEC 3 PORTFOLIO */
+
+.sec3 {
+    background-color: rgb(2, 19, 104, 0.6);
+    margin:0;
+    border:0;
+    margin-top: 100px;
+}
+
+.material-icons {
+    font-size: 80px;
+    background-color: rgba(48, 47, 47, 0.6);
+    padding: 18px 18px;
+    border-radius:50%;
+    color: white;
 }
