--- a/Portfolio1.1.0.0/css/style.css
+++ b/Portfolio1.1.0.0/css/style.css
@@ -1,4 +1,6 @@
-﻿
+﻿body {
+    margin: 0;
+}
 .sec1 {
 
     background-image: url(../img/header-bg.jpg);
@@ -45,15 +47,13 @@
 .welcome1_1 {
     border: 0;
     margin: 0;
-    border: 1px solid white;
-    margin-top: 15%;
+    margin-top: 20%;
 }
 
 .welcome1_2 {
     border:0;
     margin:0;
-    border:1px solid white;
-    margin-top: 3%;
+    margin-top: 5%;
     font-weight: 900;
     font-size: 56px;
 }
@@ -75,7 +75,12 @@
     height: 50%;
 }
 
+.sec2 h1 {
+    margin-top:8%;
+}
+
 .sec2 h2 {
+    margin-top:2%;
     margin-bottom: 5%;
 }
 
@@ -99,20 +104,57 @@
     margin: 10px;
 }
 
-
-/* SEC 3 PORTFOLIO */
-
-.sec3 {
-    background-color: rgb(2, 19, 104, 0.6);
-    margin:0;
-    border:0;
-    margin-top: 100px;
-}
-
 .material-icons {
     font-size: 80px;
     background-color: rgba(48, 47, 47, 0.6);
     padding: 18px 18px;
     border-radius:50%;
     color: white;
+}
+
+/* SEC 3 PORTFOLIO */
+
+.sec3 {
+    background-color: rgba(128, 128, 128, 0.6);
+    margin:0;
+    border:0;
+    margin-top: 100px;
+    margin-bottom: 100px;
+}
+
+
+.sec3 h1 {
+    margin:0;
+    padding:0;
+    margin-top:8%; 
+}
+
+.sec3 h2 {
+    margin-top:2%;
+    margin-bottom: 5%;
+}
+
+.thumbnail {
+    padding: 0 0 15px 0;
+    border: none;
+    border-radius: 0;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.thumbnail img {
+    width: 100%;
+    height: 100%;
+    margin-bottom: 10px;
+}
+
+.thumbnail h4 {
+    margin: 0;
+    padding: 0;
+    font-weight: 700;
+    margin-top: 20px;
+    color: black;
+}
+
+.thumbnail p {
+    margin-top: 3%;
 }
