--- a/Portfolio 2.0/css/style.css
+++ b/Portfolio 2.0/css/style.css
@@ -34,7 +34,7 @@
 #photo_profile {
     margin:0;
     border:0;
-    margin-top: 50px;
+    margin-top: 35px;
     border-radius: 50%;
     border: 10px solid white;
     width: 250px;
@@ -49,7 +49,7 @@
 .about {
     margin:0;
     border:0;
-    color: rgba(39, 37, 37, 0.8);
+    color: rgba(39, 37, 37, 0.6);
     font-weight: 600;
 }
 
@@ -61,21 +61,29 @@
     font-weight: 700;
     font-size: 30px;
     margin-top: 180px;
-    color: black;
+    color: rgba(0, 0, 0, 0.7);
 }
 
 
 .about h3 {
     font-weight:700;
     font-size: 32px;
+    color: rgba(0, 0, 0, 0.7);
+    margin-top: 20px;
 }
 
 .about h4 {
-    font-weight: 400;
+    font-weight: 600;
+    font-size: 24px;
     color: rgba(0, 13, 160, 1);
-
+    margin-top: 40px;
 }
 
+.about p {
+    margin-top: 20px;
+    display: inline-block;
+    width: 80%;
+}
 
 
 
