--- a/Portfolio 2.0/css/style.css
+++ b/Portfolio 2.0/css/style.css
@@ -20,9 +20,9 @@
     margin:0;    
     border-bottom: 1pt solid white;
     display: inline-block;
-    font-size: 40px;
+    font-size: 50px;
     font-weight: 900;
-    margin-top: 40vh;
+    margin-top: 250px;
 }
 
 .head h2 {
@@ -34,7 +34,7 @@
 #photo_profile {
     margin:0;
     border:0;
-    margin-top: 35px;
+    margin-top: 60px;
     border-radius: 50%;
     border: 10px solid white;
     width: 250px;
@@ -85,6 +85,7 @@
     color: rgba(39, 37, 37, 0.6);
     font-weight: 600;
     background-color:rgba(193, 193, 193, 0.2);
+    padding-bottom: 40px;
 }
 
 .skills h3 {
@@ -120,3 +121,183 @@
 }
 
 
+/* --- EDUCATION HEAD --- */
+
+.education_head h3 {
+    margin-top: 50px;
+    font-weight:700;
+    font-size: 32px;
+    color: rgba(0, 0, 0, 0.7);
+}
+
+.education_head h4 {
+    margin:0;
+    font-weight: 600;
+    font-size: 24px;
+    margin-top: 10px;
+    margin-bottom: 40px;
+}
+
+/* --- EDUCATION --- */
+
+.education::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.education::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.education {
+  font: normal 16px/1.5 "Helvetica Neue", sans-serif;
+
+  color: #fff;
+  overflow-x: hidden;
+  padding-bottom: 50px;
+} 
+
+/* TIMELINE
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+.timeline ul {
+  padding: 50px 0;
+}
+
+.timeline ul li {
+  list-style-type: none;
+  position: relative;
+  width: 6px;
+  margin: 0 auto;
+  padding-top: 50px;
+  background: #fff;
+}
+
+.timeline ul li::after {
+  content: '';
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  transform: translateX(-50%);
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background: inherit;
+}
+
+.timeline ul li div {
+  position: relative;
+  bottom: 0;
+  width: 400px;
+  padding: 15px;
+  /*background: #F45B69;*/
+  background:rgb(0, 2, 53);
+}
+
+.timeline ul li div::before {
+  content: '';
+  position: absolute;
+  bottom: 7px;
+  width: 0;
+  height: 0;
+  border-style: solid;
+}
+
+.timeline ul li:nth-child(odd) div {
+  left: 45px;
+}
+
+.timeline ul li:nth-child(odd) div::before {
+  left: -15px;
+  border-width: 8px 16px 8px 0;
+  /*border-color: transparent #F45B69 transparent transparent;*/
+  border-color: transparent rgb(0, 2, 53) transparent transparent;
+}
+
+.timeline ul li:nth-child(even) div {
+  left: -439px;
+}
+
+.timeline ul li:nth-child(even) div::before {
+  right: -15px;
+  border-width: 8px 0 8px 16px;
+  
+  border-color: transparent transparent transparent rgb(0, 2, 53);
+  /*border-color: transparent transparent transparent #F45B69;*/
+}
+
+time {
+  display: block;
+  font-size: 1.2rem;
+  font-weight: bold;
+  margin-bottom: 8px;
+}
+
+
+/* EFFECTS
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+.timeline ul li::after {
+  transition: background .5s ease-in-out;
+}
+
+.timeline ul li.in-view::after {
+  /*background: #F45B69;*/
+  background:rgb(0, 2, 53) 
+}
+
+.timeline ul li div {
+  visibility: hidden;
+  opacity: 0;
+  transition: all .5s ease-in-out;
+}
+
+.timeline ul li:nth-child(odd) div {
+  transform: translate3d(200px, 0, 0);
+}
+
+.timeline ul li:nth-child(even) div {
+  transform: translate3d(-200px, 0, 0);
+}
+
+.timeline ul li.in-view div {
+  transform: none;
+  visibility: visible;
+  opacity: 1;
+}
+
+
+/* GENERAL MEDIA QUERIES
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+@media screen and (max-width: 900px) {
+  .timeline ul li div {
+    width: 250px;
+  }
+  .timeline ul li:nth-child(even) div {
+    left: -289px;
+    /*250+45-6*/
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .timeline ul li {
+    margin-left: 20px;
+  }
+  .timeline ul li div {
+    width: calc(100vw - 91px);
+  }
+  .timeline ul li:nth-child(even) div {
+    left: 45px;
+  }
+  .timeline ul li:nth-child(even) div::before {
+    left: -15px;
+    border-width: 8px 16px 8px 0;
+    /*border-color: transparent #F45B69 transparent transparent;*/
+    border-color: transparent rgb(0, 2, 53)  transparent transparent;
+    
+  }
+}
