Education timeline added

--- a/Portfolio 2.0/css/style.css
+++ b/Portfolio 2.0/css/style.css
@@ -182,8 +182,8 @@
   left: 50%;
   bottom: 0;
   transform: translateX(-50%);
-  width: 30px;
-  height: 30px;
+  width: 40px;
+  height: 40px;
   border-radius: 50%;
   background: inherit;
 }
@@ -195,6 +195,7 @@
   padding: 15px;
   /*background: #F45B69;*/
   background:rgb(0, 2, 53);
+  border-radius: 10%;
 }
 
 .timeline ul li div::before {
