--- a/Portfolio 2.0/css/style.css
+++ b/Portfolio 2.0/css/style.css
@@ -123,6 +123,10 @@
 
 /* --- EDUCATION HEAD --- */
 
+.education{
+  color: black;
+}
+
 .education_head h3 {
     margin-top: 50px;
     font-weight:700;
@@ -140,165 +144,143 @@
 
 /* --- EDUCATION --- */
 
-.education::after {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-.education::before {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-.education {
-  font: normal 16px/1.5 "Helvetica Neue", sans-serif;
-
-  color: #fff;
-  overflow-x: hidden;
-  padding-bottom: 50px;
-}
-
-/* TIMELINE
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-
-.timeline ul {
-  padding: 50px 0;
-}
-
-.timeline ul li {
-  list-style-type: none;
+.timeline {
+  list-style: none;
+  padding: 20px 0 20px;
   position: relative;
-  width: 6px;
-  margin: 0 auto;
-  padding-top: 50px;
-  background: #fff;
 }
 
-.timeline ul li::after {
-  content: '';
+
+
+.timeline:before {
+  top: 0;
+  bottom: 0;
   position: absolute;
+  content: " ";
+  width: 3px;
+  background-color: #eeeeee;
   left: 50%;
-  bottom: 0;
-  transform: translateX(-50%);
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  background: inherit;
+  margin-left: -1.5px;
 }
 
-.timeline ul li div {
+.timeline > li {
+  margin-bottom: 20px;
   position: relative;
-  bottom: 0;
-  width: 400px;
-  padding: 15px;
-  /*background: #F45B69;*/
-  background:rgb(0, 2, 53);
-  border-radius: 10%;
+}
+.timeline > li:before,
+.timeline > li:after {
+  content: " ";
+  display: table;
+}
+.timeline > li:after {
+  clear: both;
+}
+.timeline > li:before,
+.timeline > li:after {
+  content: " ";
+  display: table;
+}
+.timeline > li:after {
+  clear: both;
+}
+/*  >  set each li parent of timeline*/
+
+.timeline > li > .timeline-panel {
+  width: 46%;
+  float: left;
+  left: 100px;
+  border: 1px solid #d4d4d4;
+  border-radius: 2px;
+  padding: 20px;
+  position: relative;
+  -webkit-box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
+  box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
 }
 
-.timeline ul li div::before {
-  content: '';
+.timeline > li > .timeline-panel:before {
+   position: absolute;
+   top: 26px;
+   right: -15px;
+   display: inline-block;
+   border-top: 15px solid transparent;
+   border-left: 15px solid #ccc;
+   border-right: 0 solid #ccc;
+   border-bottom: 15px solid transparent;
+   content: " ";
+}
+
+.timeline > li > .timeline-panel:after {
   position: absolute;
-  bottom: 7px;
-  width: 0;
-  height: 0;
-  border-style: solid;
+  top: 27px;
+  right: -14px;
+  display: inline-block;
+  border-top: 14px solid transparent;
+  border-left: 14px solid #fff;
+  border-right: 0 solid #fff;
+  border-bottom: 14px solid transparent;
+  content: " ";
 }
 
-.timeline ul li:nth-child(odd) div {
-  left: 45px;
+.timeline > li > .timeline-badge {
+  color: #fff;
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  font-size: 1.4em;
+  text-align: center;
+  position: absolute;
+  top: 16px;
+  left: 50%;
+  margin-left: -25px;
+  background-color: #999999;
+  z-index: 100;
+  border-top-right-radius: 50%;
+border-top-left-radius: 50%;
+border-bottom-right-radius: 50%;
+border-bottom-left-radius: 50%;
 }
 
-.timeline ul li:nth-child(odd) div::before {
+/* inverted timeline */
+
+.timeline > li.timeline-inverted > .timeline-panel {
+  float: right;
+}
+.timeline > li.timeline-inverted > .timeline-panel:before {
+  border-left-width: 0;
+  border-right-width: 15px;
   left: -15px;
-  border-width: 8px 16px 8px 0;
-  /*border-color: transparent #F45B69 transparent transparent;*/
-  border-color: transparent rgb(0, 2, 53) transparent transparent;
+  right: auto;
+}
+.timeline > li.timeline-inverted > .timeline-panel:after {
+  border-left-width: 0;
+  border-right-width: 14px;
+  left: -14px;
+  right: auto;
 }
 
-.timeline ul li:nth-child(even) div {
-  left: -439px;
+.timeline-badge.primary {
+  background-color: #2e6da4 !important;
 }
-
-.timeline ul li:nth-child(even) div::before {
-  right: -15px;
-  border-width: 8px 0 8px 16px;
-
-  border-color: transparent transparent transparent rgb(0, 2, 53);
-  /*border-color: transparent transparent transparent #F45B69;*/
+.timeline-badge.success {
+  background-color: #3f903f !important;
 }
-
-time {
-  display: block;
-  font-size: 1.2rem;
-  font-weight: bold;
-  margin-bottom: 8px;
+.timeline-badge.warning {
+  background-color: #f0ad4e !important;
 }
-
-
-/* EFFECTS
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-
-.timeline ul li::after {
-  transition: background .5s ease-in-out;
+.timeline-badge.danger {
+  background-color: #d9534f !important;
 }
-
-.timeline ul li.in-view::after {
-  /*background: #F45B69;*/
-  background:rgb(0, 2, 53)
+.timeline-badge.info {
+  background-color: #5bc0de !important;
 }
-
-.timeline ul li div {
-  visibility: hidden;
-  opacity: 0;
-  transition: all .5s ease-in-out;
+.timeline-title {
+  margin-top: 0;
+  color: inherit;
 }
-
-.timeline ul li:nth-child(odd) div {
-  transform: translate3d(200px, 0, 0);
+.timeline-body > p,
+.timeline-body > ul {
+  margin-bottom: 0;
 }
-
-.timeline ul li:nth-child(even) div {
-  transform: translate3d(-200px, 0, 0);
-}
-
-.timeline ul li.in-view div {
-  transform: none;
-  visibility: visible;
-  opacity: 1;
-}
-
-
-/* GENERAL MEDIA QUERIES
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-
-@media screen and (max-width: 900px) {
-  .timeline ul li div {
-    width: 250px;
-  }
-  .timeline ul li:nth-child(even) div {
-    left: -289px;
-    /*250+45-6*/
-  }
-}
-
-@media screen and (max-width: 600px) {
-  .timeline ul li {
-    margin-left: 20px;
-  }
-  .timeline ul li div {
-    width: calc(100vw - 91px);
-  }
-  .timeline ul li:nth-child(even) div {
-    left: 45px;
-  }
-  .timeline ul li:nth-child(even) div::before {
-    left: -15px;
-    border-width: 8px 16px 8px 0;
-    /*border-color: transparent #F45B69 transparent transparent;*/
-    border-color: transparent rgb(0, 2, 53)  transparent transparent;
-
-  }
+.timeline-body > p + p {
+  margin-top: 5px;
 }
