--- a/Portfolio 2.0/css/style.css
+++ b/Portfolio 2.0/css/style.css
@@ -135,11 +135,7 @@
 }
 
 .education_head h4 {
-    margin:0;
-    font-weight: 600;
-    font-size: 24px;
-    margin-top: 10px;
-    margin-bottom: 40px;
+ /*----------------------- */
 }
 
 /* --- EDUCATION --- */
@@ -148,6 +144,7 @@
   list-style: none;
   padding: 50px 50px 50px 50px;
   position: relative;
+  height: 1500px;
 }
 
 /*to create the vertical line*/
@@ -162,8 +159,8 @@
   left: 50%;
   margin-left: -1.5px;
 }
-
 /*end creation vertical line*/
+
 
 .timeline > li {
   margin-bottom: 20px;
@@ -183,7 +180,6 @@
 
 
 /*  >  set each li parent of timeline*/
-
 .timeline > li > .timeline-panel {
   width: 46%;
   float: left;
@@ -207,6 +203,7 @@
    content: " ";
 }
 
+/* extra arrow... non serve */
 .timeline > li > .timeline-panel:after {
   position: absolute;
   top: 27px;
@@ -218,6 +215,7 @@
   border-bottom: 14px solid transparent;
   content: " ";
 }
+/* end extra arrow */
 
 .timeline > li > .timeline-badge {
   color: #fff;
@@ -232,13 +230,14 @@
   margin-left: -25px;
   background-color: #999999;
   z-index: 100;
-  border-top-right-radius: 50%;
-border-top-left-radius: 50%;
-border-bottom-right-radius: 50%;
-border-bottom-left-radius: 50%;
+  border-radius: 50%;
 }
 
 /* inverted timeline */
+.timeline-inverted,
+.timeline-left {
+  display: none;
+}
 
 .timeline > li.timeline-inverted > .timeline-panel {
   float: right;
