--- a/Portfolio 2.0/css/style.css
+++ b/Portfolio 2.0/css/style.css
@@ -181,7 +181,7 @@
 
 /*  >  set each li parent of timeline*/
 .timeline > li > .timeline-panel {
-  width: 46%;
+  width: 43%;
   float: left;
   border: 1px solid #d4d4d4;
   border-radius: 2px;
@@ -193,7 +193,7 @@
 
 .timeline > li > .timeline-panel:before {
    position: absolute;
-   top: 26px;
+   top: 80px;
    right: -15px;
    display: inline-block;
    border-top: 15px solid transparent;
@@ -206,7 +206,7 @@
 /* extra arrow... non serve */
 .timeline > li > .timeline-panel:after {
   position: absolute;
-  top: 27px;
+  top: 80px;
   right: -14px;
   display: inline-block;
   border-top: 14px solid transparent;
@@ -219,23 +219,40 @@
 
 .timeline > li > .timeline-badge {
   color: #fff;
-  width: 50px;
-  height: 50px;
+  width: 70px;
+  height: 70px;
   line-height: 50px;
   font-size: 1.4em;
   text-align: center;
   position: absolute;
-  top: 16px;
+  top: 60px;
   left: 50%;
-  margin-left: -25px;
-  background-color: #999999;
-  z-index: 100;
+  margin-left: -34px;
   border-radius: 50%;
+  background-color: rgb(255,255,255);
+  z-index: 100;
+  border: 0.5px solid gray;
+}
+/*  --- Img logo timeline set up --- */
+
+.logo_uni {
+  position: absolute;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  margin-top: 10px;
+  margin-left: -25px;
 }
 
+
 /* inverted timeline */
-.timeline-inverted,
-.timeline-left {
+
+
+
+#Left1,
+#Right1,
+#Left2,
+#Right2{
   display: none;
 }
 
