--- a/Portfolio 2.0/css/style.css
+++ b/Portfolio 2.0/css/style.css
@@ -120,6 +120,10 @@
     color:white;
 }
 
+.tab_skills > .row > .col-md-3 > h5 {
+  font-weight: bold;
+  color: rgba(0, 0, 0, 0.7);
+}
 
 /* --- EDUCATION HEAD --- */
 
@@ -144,7 +148,7 @@
   list-style: none;
   padding: 50px 50px 50px 50px;
   position: relative;
-  height: 1500px;
+  height: 1200px;
 }
 
 /*to create the vertical line*/
@@ -181,19 +185,20 @@
 
 /*  >  set each li parent of timeline*/
 .timeline > li > .timeline-panel {
-  width: 43%;
+  width: 41%;
   float: left;
   border: 1px solid #d4d4d4;
   border-radius: 2px;
   padding: 20px;
   position: relative;
+  border-radius: 10%;
   -webkit-box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
   box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
 }
 
 .timeline > li > .timeline-panel:before {
    position: absolute;
-   top: 80px;
+   top: 120px;
    right: -15px;
    display: inline-block;
    border-top: 15px solid transparent;
@@ -206,7 +211,7 @@
 /* extra arrow... non serve */
 .timeline > li > .timeline-panel:after {
   position: absolute;
-  top: 80px;
+  top: 120px;
   right: -14px;
   display: inline-block;
   border-top: 14px solid transparent;
@@ -219,15 +224,15 @@
 
 .timeline > li > .timeline-badge {
   color: #fff;
-  width: 70px;
-  height: 70px;
+  width: 150px;
+  height: 150px;
   line-height: 50px;
   font-size: 1.4em;
   text-align: center;
   position: absolute;
   top: 60px;
   left: 50%;
-  margin-left: -34px;
+  margin-left: -70px;
   border-radius: 50%;
   background-color: rgb(255,255,255);
   z-index: 100;
@@ -238,10 +243,10 @@
 .logo_uni {
   position: absolute;
   border-radius: 50%;
-  width: 50px;
-  height: 50px;
-  margin-top: 10px;
-  margin-left: -25px;
+  width: 140px;
+  height: 140px;
+  margin-top: 4px;
+  margin-left: -70px;
 }
 
 
@@ -308,4 +313,18 @@
             left: -14px;
             right: auto;
         }
+}
+
+
+
+/* --- PORTFOLIO --- */
+
+.portfolio {
+  margin:0;
+  border:0;
+  color: rgba(39, 37, 37, 0.6);
+  font-weight: 600;
+  background-color:rgba(193, 193, 193, 0.2);
+  padding-top: 40px;
+  padding-bottom: 40px;
 }
