--- a/Portfolio 2.0/css/style.css
+++ b/Portfolio 2.0/css/style.css
@@ -192,6 +192,7 @@
   padding: 20px;
   position: relative;
   border-radius: 10%;
+  background-color: white;
   -webkit-box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
   box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
 }
@@ -249,6 +250,14 @@
   margin-left: -70px;
 }
 
+#logo_uic{
+  position: absolute;
+  border-radius: 50%;
+  width: 160px;
+  height: 160px;
+  margin-top: -6px;
+  margin-left: -80px;
+}
 
 /* inverted timeline */
 
